---
config:
    # layout: elk
    class:
        hideEmptyMembersBox: true
---
classDiagram
    class Snapshot~E~ {
        <<interface>>
        + Clone() Self
        + ApplyEntry(E entry)
    }
    class Log["Log&lt;E, S&gt;"] {
        + Append(E entry)
        + Latest() S
        + IndexBeforeFirst() Index
        + IndexAfterLast() Index
        + HasEntryAt(Index index) bool
        + GetEntryAt(Index index) Maybe~E~
        + GetEntryLatest() Maybe&lt;&lpar;E, Index&rpar;&gt;
        + NewCheckpointAt(Index index) Checkpoint
        + TruncateAt(Index index)
    }

    Log o-- Snapshot

    class Index
    class Checkpoint~S~ {
        + Index() Index
        + Data() S
        + AdvanceTo(Index index)
        + Close()
    }

    Log *-- Checkpoint

    Log -- Index

